fix: scale hover on inner wrapper, chaos button bottom-left, wider stack spacing

--- a/src/components/chaos-button/chaos-button.module.scss
+++ b/src/components/chaos-button/chaos-button.module.scss
@@ -2,8 +2,8 @@
 
 .wrapper {
   position: fixed;
-  top: 2rem;
-  left: 2rem;
+  bottom: 3rem;
+  left: 3rem;
   z-index: $z-control-panel;
 }
 
